--- a/frontend/translations/ta.po
+++ b/frontend/translations/ta.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2023-06-17 09:51+0000\n"
 "Last-Translator: \"K.B.Dharun Krishna\" <kbdharunkrishna@gmail.com>\n"
-"Language-Team: Tamil <https://hosted.weblate.org/projects/penpot/frontend/ta/"
-">\n"
+"Language-Team: Tamil "
+"<https://hosted.weblate.org/projects/penpot/frontend/ta/>\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -148,12 +148,6 @@ msgstr "ஒரு கணக்கை உருவாக்கவும்"
 msgid "auth.register-subtitle"
 msgstr "இது இலவசம், இது திறந்த மூலமானது"
 
-msgid "common.share-link.link-copied-success"
-msgstr "இணைப்பு வெற்றிகரமாக நகலெடுக்கப்பட்டது"
-
-msgid "common.share-link.manage-ops"
-msgstr "அனுமதிகளை நிர்வகிக்கவும்"
-
 #: src/app/main/ui/auth/register.cljs
 msgid "auth.register-title"
 msgstr "ஒரு கணக்கை உருவாக்கவும்"
@@ -166,14 +160,25 @@ msgid "auth.terms-of-service"
 msgstr "சேவை விதிமுறைகள்"
 
 #: src/app/main/ui/auth/register.cljs
+msgid "auth.terms-privacy-agreement"
+msgstr ""
+"புதிய கணக்கை உருவாக்கும் போது, எங்கள் சேவை விதிமுறைகள் மற்றும் தனியுரிமைக் "
+"கொள்கையை ஏற்கிறீர்கள்."
+
+#: src/app/main/ui/auth/register.cljs
 msgid "auth.verification-email-sent"
 msgstr "சரிபார்ப்பு மின்னஞ்சலை அனுப்பியுள்ளோம் இந்த முகவரிக்கு"
+
+msgid "common.publish"
+msgstr "வெளியிடுங்கள்"
 
 msgid "common.share-link.all-users"
 msgstr "அனைத்து Penpot பயனர்களும்"
 
-msgid "common.publish"
-msgstr "வெளியிடுங்கள்"
+msgid "common.share-link.confirm-deletion-link-description"
+msgstr ""
+"இந்த இணைப்பை நிச்சயமாக அகற்ற விரும்புகிறீர்களா? நீங்கள் அதைச் செய்தால், அது "
+"இனி யாருக்கும் கிடைக்காது"
 
 msgid "common.share-link.current-tag"
 msgstr "(தற்போதைய)"
@@ -183,6 +188,17 @@ msgstr "இணைப்பை அழிக்கவும்"
 
 msgid "common.share-link.get-link"
 msgstr "இணைப்பைப் பெறுங்கள்"
+
+msgid "common.share-link.link-copied-success"
+msgstr "இணைப்பு வெற்றிகரமாக நகலெடுக்கப்பட்டது"
+
+msgid "common.share-link.manage-ops"
+msgstr "அனுமதிகளை நிர்வகிக்கவும்"
+
+msgid "common.share-link.page-shared"
+msgid_plural "common.share-link.page-shared"
+msgstr[0] "1 பக்கம் பகிரப்பட்டது"
+msgstr[1] "%s பக்கங்கள் பகிரப்பட்டன"
 
 msgid "common.share-link.permissions-can-comment"
 msgstr "கருத்து தெரிவிக்கலாம்"
@@ -195,19 +211,3 @@ msgstr "இணைப்பு உள்ள எவருக்கும் அண
 
 msgid "common.share-link.permissions-pages"
 msgstr "பக்கங்கள் பகிரப்பட்டன"
-
-#: src/app/main/ui/auth/register.cljs
-msgid "auth.terms-privacy-agreement"
-msgstr ""
-"புதிய கணக்கை உருவாக்கும் போது, எங்கள் சேவை விதிமுறைகள் மற்றும் தனியுரிமைக் "
-"கொள்கையை ஏற்கிறீர்கள்."
-
-msgid "common.share-link.confirm-deletion-link-description"
-msgstr ""
-"இந்த இணைப்பை நிச்சயமாக அகற்ற விரும்புகிறீர்களா? நீங்கள் அதைச் செய்தால், அது "
-"இனி யாருக்கும் கிடைக்காது"
-
-msgid "common.share-link.page-shared"
-msgid_plural "common.share-link.page-shared"
-msgstr[0] "1 பக்கம் பகிரப்பட்டது"
-msgstr[1] "%s பக்கங்கள் பகிரப்பட்டன"
